src/objects/BMCServiceDesk__Problem__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpProblem</customHelpPage>
    <description>This object allows you to store data for problems..</description>
    <fields>
        <fullName>BMCServiceDesk__Additional_email_information__c</fullName>
        <inlineHelpText>Use this field to add additional information to the email even after selecting the email template.</inlineHelpText>
        <label>Additional email information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AllTaskCloseController__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to activate the workflow for sending email to Problem owner. The value is toggled to True if the last value was False to activate field update.</description>
        <label>All Tasks Closed Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BLANK__c</fullName>
        <description>Use this field to add space between fields in a Console fieldset.</description>
        <label>&lt;BLANK&gt;</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category__c</fullName>
        <description>This field stores the category linked to the problem</description>
        <formula>BMCServiceDesk__FKCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the problem&apos;s category. Categories allow you to classify the problem using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Closed_Date_Time__c</fullName>
        <description>This field stores the date and time when the problem closed</description>
        <inlineHelpText>Use this field to select the date when the problem is closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClosureCategory__c</fullName>
        <label>Closure Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Resolved/Fixed</fullName>
                </value>
                <value>
                    <fullName>Unable to resolve</fullName>
                </value>
                <value>
                    <fullName>Workaround created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Compliant__c</fullName>
        <description>This field stores the value if the problem is compliant or not</description>
        <formula>IF(ISNULL(BMCServiceDesk__Due_Date_Time__c), &quot;YES&quot;, 
	( IF( ISNULL(BMCServiceDesk__Closed_Date_Time__c), ( IF(BMCServiceDesk__Due_Date_Time__c &gt;= NOW(), &quot;YES&quot;, &quot;NO&quot;)), 
		( IF(BMCServiceDesk__Due_Date_Time__c &gt;= BMCServiceDesk__Closed_Date_Time__c, &quot;YES&quot;, &quot;NO&quot;))
	))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Deep_View__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__DeepView?id=&quot;+Id, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/deep-view.png&quot;, &quot;&quot;, 18, 18), &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SmartView</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Due_Date_Time__c</fullName>
        <description>This field stores the date and time when the problem is due</description>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBroadcast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked broadcast</description>
        <label>Broadcast</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__state__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select open and active broadcast.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Broadcasts__c</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked category</description>
        <inlineHelpText>From the list of options, select the problem&apos;s category. Categories allow you to classify the problem using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Category__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active category.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClosed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked user who closed the problem</description>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Staff ID Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKImpact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked impact</description>
        <inlineHelpText>From the list of options, select the problem&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the problem.</inlineHelpText>
        <label>Impact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Impact__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active impact.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKPriority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked priority</description>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected.</inlineHelpText>
        <label>Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Priority__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active priority</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Priority__c</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.BMCServiceDesk__IsStaffUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Problems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked status</description>
        <inlineHelpText>From the list of options, select the appropriate status for the problem.</inlineHelpText>
        <label>Status</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select an active status that applies to problems.</errorMessage>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToProblem__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked urgency</description>
        <inlineHelpText>From the list of options, select how quickly the problem needs to be completed. The urgency and the level of impact are used to calculate the priority of the problem.</inlineHelpText>
        <label>Urgency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Urgency__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active urgency.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impact__c</fullName>
        <description>This field stores the impact linked to the problem</description>
        <formula>BMCServiceDesk__FKImpact__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the problem&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the problem.</inlineHelpText>
        <label>Impact~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the value if the problem is active or inactive</description>
        <inlineHelpText>Select this field if the problem is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Known_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the value if the problem has known error or not</description>
        <inlineHelpText>Select this field if you want to indicate that the problem is a known error. A known error is a problem for which the root cause is identified.</inlineHelpText>
        <label>Known Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Launch_Console__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=ProblemLaunchConsole&amp;recordName=&quot;+Name+&quot;&amp;recordId=&quot;+Id+&quot;&amp;isdtp=vw&amp;uiTheme=&quot;+$User.UIThemeDisplayed, Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record will be opened either in Problem Console or in Remedyforce Console tab</inlineHelpText>
        <label>Launch Console</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LockedRecordTimestamp__c</fullName>
        <description>this field is used in case of record locking.</description>
        <label>LockedRecordTimestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_linked_Changes__c</fullName>
        <description>This field displays the number of changes linked to the problem</description>
        <label>Number of linked Changes</label>
        <summaryForeignKey>BMCServiceDesk__Change_Problem_Link__c.BMCServiceDesk__FKProblem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_linked_Incidents__c</fullName>
        <description>This field displays the number of incidents linked to the problem</description>
        <label>Number of linked Incidents</label>
        <summaryForeignKey>BMCServiceDesk__Incident_Problem_Link__c.BMCServiceDesk__FKProblem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Open_Date_Time__c</fullName>
        <description>This field stores the date and time when the problem opened</description>
        <inlineHelpText>This field is automatically set to the date and time at which the problem was created.</inlineHelpText>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Priority__c</fullName>
        <description>This field stores the priority linked to the problem</description>
        <formula>BMCServiceDesk__FKPriority__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected.</inlineHelpText>
        <label>Priority~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Problem_Description__c</fullName>
        <description>This field stores the details of the description regarding the problem</description>
        <inlineHelpText>Use this field to enter a description of the problem.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Problem_Resolution__c</fullName>
        <description>This field stores the details of the resolution regarding the problem</description>
        <inlineHelpText>Use this field to specify what has been done to fix the problem. Provide detailed solution instructions. For example, describe the configuration setting that must be applied to a configuration item while installing the configuration item.</inlineHelpText>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Problem_Source__c</fullName>
        <description>This field stores the source of the problem</description>
        <label>Problem Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Event Trigger</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                    <default>true</default>
                    <label>Incident</label>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Problem_console_detail_link__c</fullName>
        <description>To be used in Service Cloud Console</description>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__ProblemConsole?record_name=&quot;&amp; Name &amp;&quot;&amp;record_id=&quot; &amp; Id &amp; &quot;&amp;isdtp=vw&amp;isServiceCloudConsole=true&quot;,Name, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Problem #+</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Queue__c</fullName>
        <description>Queue to which the record is assigned.</description>
        <formula>IF(UPPER(LEFT(OwnerId , 3)) =&quot;00G&quot;,BMCServiceDesk__queueName__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ShowDueDateDialog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field decides the opening of pop up window for recalculation of due date in case of Standard Forms.</description>
        <label>Show DueDate Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Staff_ID_Closed_By__c</fullName>
        <description>This field stores the user name who closed the problem</description>
        <formula>BMCServiceDesk__FKClosed_By__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Staff ID Closed By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__State__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field stores the value if the problem is open or closed</description>
        <label>State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <description>This field stores the status linked to the problem</description>
        <formula>BMCServiceDesk__FKStatus__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the appropriate status for the problem.</inlineHelpText>
        <label>Status~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Task_Closed_Controller__c</fullName>
        <description>This field is used to activate the workflow for sending email to Problem owner after closing each linked task. The value is set with the linked task name to activate field update.</description>
        <label>Task Closed Controller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Total_Duration__c</fullName>
        <description>This field stores the total duration of the problem</description>
        <label>Total Duration (minutes)</label>
        <summarizedField>BMCServiceDesk__Problem_History__c.BMCServiceDesk__Duration__c</summarizedField>
        <summaryForeignKey>BMCServiceDesk__Problem_History__c.BMCServiceDesk__FKProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpdateCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field can be used in workflows to increment the count when a new record is added to the Problem History.</description>
        <label>Record Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Urgency__c</fullName>
        <description>This field stores the urgency linked to the problem</description>
        <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select how quickly the problem needs to be completed. The urgency and the level of impact are used to calculate the priority of the problem.</inlineHelpText>
        <label>Urgency~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Work_Around__c</fullName>
        <description>This field stores the details of the workaround for the problem if any</description>
        <inlineHelpText>Use this field to enter the temporary or permanent alternative to fixing the current problem, if the alternative is available.</inlineHelpText>
        <label>Workaround</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Workaround_details__c</fullName>
        <description>This field stores the details of the workaround for the problem if any</description>
        <inlineHelpText>Use this field to enter the temporary or permanent alternative to fixing the current problem, if the alternative is available.</inlineHelpText>
        <label>Workaround Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__queueName__c</fullName>
        <inlineHelpText>Displays the name of the queue to which the problem was last assigned.</inlineHelpText>
        <label>Last Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__shortDescription__c</fullName>
        <inlineHelpText>This field will contain value first 255 character value of description field.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <label>Problem</label>
    <listViews>
        <fullName>BMCServiceDesk__Remedyforce_Problem_View</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__FKPriority__c</columns>
        <columns>BMCServiceDesk__Problem_Description__c</columns>
        <columns>BMCServiceDesk__FKStatus__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>BMCServiceDesk__State__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BMCServiceDesk__Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Remedyforce Problem View</label>
    </listViews>
    <listViews>
        <fullName>CORHIO_Problem</fullName>
        <filterScope>Queue</filterScope>
        <label>CORHIO</label>
        <queue>CORHIO</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Integration_Problem</fullName>
        <filterScope>Queue</filterScope>
        <label>Integration</label>
        <queue>Integration</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jiva_Problem</fullName>
        <filterScope>Queue</filterScope>
        <label>Jiva</label>
        <queue>Jiva</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NMHIE_Problem</fullName>
        <filterScope>Queue</filterScope>
        <label>NMHIE</label>
        <queue>NMHIE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nant_IMT_Problem</fullName>
        <filterScope>Queue</filterScope>
        <label>IMT</label>
        <queue>IMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PrimeSuite_EMR_Problem</fullName>
        <filterScope>Queue</filterScope>
        <label>PrimeSuite EMR</label>
        <queue>PrimeSuite_EMR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Prophet_Problem</fullName>
        <filterScope>Queue</filterScope>
        <label>Prophet</label>
        <queue>Prophet</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Security_Problem</fullName>
        <filterScope>Queue</filterScope>
        <label>Security</label>
        <queue>Security</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Problem #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Problems</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Cannot_Update_Closed_Problem</fullName>
        <active>true</active>
        <description>This rule does not allow user to edit record if it is closed.</description>
        <errorConditionFormula>AND( NOT( BMCServiceDesk__State__c ) , NOT( PRIORVALUE( BMCServiceDesk__State__c ) ),NOT( ISNEW() ), NOT( ISCHANGED( BMCServiceDesk__Total_Duration__c ) ), NOT( ISCHANGED( BMCServiceDesk__Number_of_linked_Changes__c ) ), NOT( ISCHANGED( BMCServiceDesk__Number_of_linked_Incidents__c ) )   )</errorConditionFormula>
        <errorMessage>This problem is closed. Reopen the problem to modify it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__KnownErrorMustBeCheckedForWorkaround</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND( ISBLANK(BMCServiceDesk__Work_Around__c)=FALSE,BMCServiceDesk__Known_Error__c=FALSE), TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Select the Known Error field to save the workaround</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__dueDateMustBeAfterOpenedDate</fullName>
        <active>true</active>
        <description>Due date must come after Opened Date.</description>
        <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__Due_Date_Time__c),ISBLANK(	BMCServiceDesk__Due_Date_Time__c) ) ),NOT(ISCHANGED( BMCServiceDesk__Open_Date_Time__c ) ), BMCServiceDesk__Due_Date_Time__c &lt; BMCServiceDesk__Open_Date_Time__c)</errorConditionFormula>
        <errorMessage>The Due Date must be later than the Opened Date</errorMessage>
    </validationRules>
</CustomObject>